--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.datasource.tomcat.time-between-eviction-runs-millis=1
 
 #jpa
 spring.jpa.hibernate.ddl-auto=update
+
+#jsp
+spring.mvc.view.prefix= /WEB-INF/views/
+spring.mvc.view.suffix= .jsp
