--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
 #h2
-spring.h2.console.path=/h2
-spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
 
 #datasource
-spring.datasource.url=jdbc:h2:file:~/techreads
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/techreads
+spring.datasource.username=root
+spring.datasource.password=root+1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #pool
 spring.datasource.tomcat.max-active=10
