--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/techreads
 spring.datasource.username=root
 spring.datasource.password=root+1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#datasource
+#spring.datasource.url=jdbc:h2:file:~/techreads
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
 
 #pool
 spring.datasource.tomcat.max-active=10
@@ -23,3 +28,4 @@ spring.jpa.hibernate.ddl-auto=update
 #jsp
 spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
+
